CHKN-139 CheckController 작업 완료
