# src/swagger/swagger.json
@@ -115,6 +115,18 @@
 				"security": [],
 				"parameters": []
 			}
+		},
+		"/config/health": {
+			"get": {
+				"operationId": "GetHealth",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
 		}
 	},
 	"servers": [
